# cmakehello

./: CMakeLists.txt  README.md  cmakehello.c
